<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">paiooB(测试)</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
       <string name="menu_exit">退出账户</string>

    <!-- 下拉刷新 -->
    <string name="pull_to_refresh_release_to_fresh">松开可以刷新...</string>
    <string name="pull_to_refresh_pull_can">下拉可刷新...</string>
    <string name="pull_to_refresh_refreshing">正在刷新...</string>
    <string name="pull_to_refresh_chick_refresh">点击刷新...</string>
    <!-- 下拉刷新 -->


    <!-- lv滚动到底部加载 -->
    <string name="lv_footer_more">更多载入中...</string>
      <string name="lv_footer_load_fail">加载失败，点击重新加载</string>
    <string name="lv_footer_loading">加载中...</string>
    <!-- lv滚动到底部加载 -->


    <!-- splash -->
    <string name="login">登录</string>
    <string name="register">注册</string>

    <!-- forge_pwd.xml  找回密码解码 -->
    <string name="find_pwd">找回密码</string>

    <!-- login.xml -->
    <string name="username">用户名</string>
    <string name="pwd">密码</string>
    <string name="free_register">免费注册</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="login2">登\t\t录</string>

    <!-- free_register.xml -->
    <string name="fr_account">账&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：</string>
    <string name="fr_pwd">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码：</string>
    <string name="fr_sure_pwd">确认密码：</string>
    <string name="fr_contacts">联&#160;&#160;系&#160;&#160;人：</string>
    <string name="fr_cellphone">手&#160;&#160;机&#160;&#160;号：</string>
    <string name="fr_mail">邮&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;箱：</string>
    <string name="next">下一步</string>
    <string name="user_name">用户名：</string>

    <!-- extra_company_info.xml -->
    <string name="eci_company_name">公司名称：</string>
    <string name="eci_company_location">所&#160;&#160;在&#160;&#160;地：</string>
    <string name="eci_company_address">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址：</string>
    <string name="eci_company_property">企业性质：</string>
    <string name="eci_company_capital">注册资本：</string>
    <string name="eci_company_info_title">补充公司信息</string>
    <string name="eci_read_yes">我已阅读并同意</string>
    <string name="eci_company_protocol">《芝麻广告平台用户注册协议》</string>

    <!-- 侧滑菜单      （这个和title bar的文本，以及tab文本相对应） -->
    <string name="slidemenu_home">首&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;页</string>
    <string name="slidemenu_finance">财&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;务</string>
    <string name="slidemenu_preview">预&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;览</string>
    <string name="slidemenu_recharge">账号充值</string>
    <string name="slidemenu_friends">推荐好友</string>
    <string name="slidemenu_transfer">余额转账</string>
    <string name="slidemenu_ticket">优&#160;&#160;惠&#160;&#160;劵</string>
    <string name="slidemenu_setup">设&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;置</string>
  
   <!-- 主页。home.xml -->
       <string name="home_top_left">账户余额</string> 
        <string name="home_top_right">实时扣费</string> 
        
         <string name="home_middle_left">点击量</string> 
          <string name="home_middle_right">展现量</string> 
           <string name="home_bottom_left">点击率</string> 
            <string name="home_bottom_right">点击花费</string> 
      <string name="a_week_trend">一周点击走势</string>
    
    
      
      
      
    <!-- nav_finance.xml -->
    <string name="current_balance">当前余额</string>
    <string name="frozen_capital">冻结金额0元</string>
    <string name="ad_put_in">（广告投放中）</string>
    <string name="total_recharge">总充值</string>
    <string name="recommended_reward">推荐奖励</string>
    <string name="balance_switch">余额转账</string>
    <string name="ad">广告消费</string>
   <string name="title_bar_title_finance">财务</string>
   
   
   <!-- 导航 预览 -->
   <string name="title_bar_title_preview">预览</string>
    <string name="desktop_ad">桌面广告</string>
   <string name="push_ad">推送广告</string>
   
   
   <!-- 预览详情 -->
   <string name="title_bar_title_preview_detailed">预览详情</string>
    <string name="preview_detailed_bus">公交信息</string>
     <string name="preview_detailed_cbd">商务中心</string>
      <string name="preview_detailed_business">商家简介</string>
       <string name="preview_detailed_time">营业时间</string>
    <!-- 充值记录，recharge_record.xml -->

    <string name="carid">卡号：</string>
    <string name="business_success">交易成功</string>
    <string name="business_fail">交易失败</string>
 <string name="title_bar_title_recharge_rocord">充值记录</string>
     <!-- 广告消费记录 -->
     <string name="title_bar_title_adcosume">广告消费记录</string>
    
    <!-- 推荐好友界面 -->
    <string name="your_re_number">您的专属推荐码：</string>
    <string name="find_friends_install_app1">邀请好友安装APP并注册成功，可获取1元广告充值奖励</string>
    <string name="qrcode_re">扫一扫推荐</string>
    <string name="copy_link">复制链接</string>
    <!-- 推荐人收入 -->
    <string name="title_bar_title_referee_money">推荐人收入</string>
    <!-- 意见反馈 -->
    <string name="telephone_number">020-520520520</string>

    <!-- 余额转账 -->
    <string name="at_most_account">至多可转账</string>
    <string name="paioo_usernumber">收款人芝麻账号</string>
    <string name="how_much_account">转账金额</string>
 <string name="title_bar_title_transfer">转账记录</string>
    
    <!-- 账号充值 -->
    <string name="recharge_cardid">充值卡卡号</string>
    <string name="recharge_pwd">充值卡密码</string>
    <string name="recharge">充\t\t值</string>
    <string name="recharge_explain">充值说明：</string>

    <!-- common -->
    <string name="submit">提\t\t交</string>

    <!-- 设置tab -->
     <string name="title_bar_title_setup">设置</string>
    <string name="modify_contact_way">修改联系方式</string>
    <string name="modify_password">修改密码</string>
    <string name="suggest">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="check_version">检测版本</string>
    <string name="exit_app">退出账号</string>
    <string name="setup_safe_exit">安全退出</string>
    <string name="setup_contacts">联系人</string>
    <string name="setup_cellphone">手机号</string>
    <string name="setup_telephone">固话</string>
    <string name="setup_mail">邮箱</string>

    <!-- 修改联系方式 -->
    <string name="contact_way_contancter">联系人：</string>
    <string name="contact_way_cellphone">手机号：</string>
    <string name="contact_way_telephone">固&#160;&#160;&#160;&#160;话：</string>
    <string name="contact_way_mail">邮&#160;&#160;&#160;&#160;箱：</string>

    <!-- 修改密码界面 -->
    <string name="modify_old_password">现在密码：</string>
    <string name="modify_new_pasword">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码：</string>
    <string name="modify_sure_password">确认密码：</string>
   <string name="modify_password_warn">6位以上含字母和数字</string>
    <!-- 意见反馈 -->
    <string name="welcome_suggest">欢迎您在这里留下宝贵的意见</string>
    <string name="ask_phone_number">咨询服务热线</string>

    <!-- 二维码模块 -->
    <string name="xiaofeima">消费码：</string>
    
    
    <string name="warn_qrcode_error">验证失败，非本商家优惠券</string>
    
    <!-- toash 提示 -->
    <string name="warn_toast_account_isempty">hi,账号没有填写</string>
    <string name="warn_toast_pwd_isempty">密码还未填写</string>
    <string name="warn_toast_contacts_isempty">联系人为空</string>
    <string name="warn_toast_cellphone_isempty">手机号码为空</string>
    <string name="warn_toast_telephone_isempty">固话为空</string>
    <string name="warn_toast_username_isempty">用户名还未填写</string>
    <string name="warn_toast_username_unstandard">用户名格式有误</string>
    <string name="warn_toast_cellphone_unstandard">手机号不标准</string>
    <string name="warn_toast_telephone_unstandard">固话号码不标准</string>
    <string name="warn_toast_old_pwd_isempty">现在密码为空</string>
    <string name="warn_toast_old_pwd_unstandard">现在密码格式不对</string>
    
    <string name="warn_toast_new_pwd_isempty">新密码为空</string>
    
    <string name="warn_toast_twice_pwd_difference">两次密码不一致</string>
    <string name="warn_toast_pwd_unstandard">密码格式有误</string>
    <string name="warn_toast_cardid_isempty">卡号为空</string>
    <string name="warn_toast_cardid_unstandard">卡号格式有误</string>
    <string name="warn_toast_company_name_isempty">公司名字为空</string>
    <string name="warn_toast_location_isempty">所在地为空</string>
    <string name="warn_toast_address_isempty">地址为空</string>
    <string name="warn_toast_property_isempty">企业性质为空</string>
    <string name="warn_toast_capital_isempty">注册资本为空</string>
     <string name="warn_toast_unagree">你还没有同意协议哦</string>
    <string name="warn_toast_suggest_isempty">真的不说点...</string>
      <string name="warn_toast_again_click_exit">再点一次退出</string>
          <string name="warn_toast_updateapp_exception">更新App异常</string>
       <string name="warn_toast_already">链接已复制</string>
         <string name="warn_toast_net_error">网络不给力，请稍后重试...</string>
       <!-- 登录界面 -->
        <string name="warn_dialog_login">登录中，请稍等...</string>
       <string name="warn_dialog_sendqrcode">发送中，请稍等...</string>
      <string name="warn_dialog_update">升级提醒</string>
      <string name="warn_dialog_sureupdate">确定更新</string>
      <string name="warn_dialog_cancle">取消</string>
     <string name="warn_toast_app_uninstall">Sorry,你的应用没安装！</string>
        <string name="warn_dialog_verify_qrcode">二维码验证中，请稍等...</string>
</resources>