<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/title_bar"/>
    
     <LinearLayout style="@style/fr_ll" >

        <TextView
            style="@style/fr_tv"
            android:text="@string/modify_old_password" />

        <EditText
            
            android:inputType="textPassword"
            android:hint="@string/modify_password_warn"
            android:id="@+id/modify_password_old_pwd_et"
            style="@style/fr_et" />
    </LinearLayout>
    
     <LinearLayout style="@style/fr_ll" >

        <TextView
            style="@style/fr_tv"
            android:text="@string/modify_new_pasword" />

        <EditText
              android:inputType="textPassword"
              android:hint="@string/modify_password_warn"
            android:id="@+id/modify_password_new_pwd_et"
            style="@style/fr_et" />
    </LinearLayout>
    
      <LinearLayout style="@style/fr_ll" >

        <TextView
            style="@style/fr_tv"
            android:text="@string/modify_sure_password" />

        <EditText
              android:inputType="textPassword"
              android:hint="@string/modify_password_warn"
            android:id="@+id/modify_password_sure_pwd_et"
            style="@style/fr_et" />
    </LinearLayout>
    
     <Button
        android:id="@+id/modify_password_submit_bt"
        style="@style/bt_orange"
        android:text="@string/submit" />
    

</LinearLayout>