<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/suggest_title_bar"
        layout="@layout/title_bar" />

    <EditText
        android:id="@+id/suggest_et"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/suggest_title_bar"
        android:layout_margin="10dp"
        android:background="@drawable/suggest_et_bg"
        android:gravity="left|top"
        android:hint="@string/welcome_suggest"
        android:padding="10dp" >
    </EditText>

    <Button
        android:id="@+id/button1"
        style="@style/bt_orange"
        android:layout_below="@id/suggest_et"
        android:text="@string/submit" />

    

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:id="@+id/suggest_call_rl"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector_suggest_telephone_bg" >

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_marginRight="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/suggest_telephone"
               />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telephone_number"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize_large" />
        </LinearLayout>
    </RelativeLayout>
<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@id/suggest_call_rl"
        android:text="@string/ask_phone_number" />
</RelativeLayout>